--- a/src/index.html
+++ b/src/index.html
@@ -21,18 +21,28 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-12">
+        <h1>Login</h1>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-12 col-md-6">
-        <form>
+        <form class="js-login-form">
           <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" id="username">
+            <label for="login-form-username">Username</label>
+            <input name="username" type="text" class="form-control" id="login-form-username">
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password">
+            <label for="login-form-password">Password</label>
+            <input name="password" type="password" class="form-control" id="login-form-password">
           </div>
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary js-submit-button">Login</button>
         </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <a href="register.html">Register</a>
       </div>
     </div>
   </div>
