--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -30,6 +30,22 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-12">
+        <h1>Change password</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <form class="js-change-password-form">
+          <div class="form-group">
+            <label for="login-form-password">New password</label>
+            <input name="password" type="password" class="form-control" id="change-password-form-password">
+          </div>
+          <button type="submit" class="btn btn-primary js-submit-button mb-5">Change password</button>
+        </form>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-12 col-md-6">
         <form class="js-logout-form">
           <button type="submit" class="btn btn-primary js-submit-button">Logout</button>
