--- a/src/register.html
+++ b/src/register.html
@@ -34,13 +34,11 @@
             <label for="register-form-password">Password</label>
             <input name="password" type="password" class="form-control" id="register-form-password">
           </div>
-          <button type="submit" class="btn btn-primary js-submit-button">Register</button>
+          <div class="d-flex justify-content-between align-items-center">
+            <button type="submit" class="btn btn-primary js-submit-button">Register</button>
+            <a href="/">Back to login</a>
+          </div>
         </form>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <a href="/">Back to login</a>
       </div>
     </div>
   </div>
